--- a/src/app/(accounts)/accounts.module.css
+++ b/src/app/(accounts)/accounts.module.css
@@ -93,7 +93,7 @@
     display: flex;
     width: fit-content;
     align-items: flex-start;
-    justify-content: end;
+    justify-content: flex-end;
     right: 0;
 }
 
