--- a/src/app/(extras)/(nav)/navbar.module.css
+++ b/src/app/(extras)/(nav)/navbar.module.css
@@ -50,7 +50,6 @@
     font-size: 28px;
     width: 100%;
     justify-content: center;
-    cursor: pointer;
 }
 
 .linkHome {
@@ -60,6 +59,7 @@
     width: 300px;
     height: 40px;
     overflow: hidden;
+    cursor: unset;
 }
 .account {
     display: flex;
@@ -149,7 +149,6 @@
             flex-direction: column;
             box-shadow: 0 5px 5px rgba(113, 113, 113, 0.1);
             cursor: pointer;
-            transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         }
 
         .wrapper .tooltip {
@@ -218,6 +217,7 @@
     top: -18px;
     width: 210px;
     height: 75px;
+    cursor: pointer;
 }
 
 
@@ -261,7 +261,7 @@
 
 .nav-icon3 {
     width: 25px;
-    height: 100%;
+    height: 30px;
     margin: 0;
     padding: 0;
     -webkit-transform: rotate(0deg);
@@ -286,7 +286,7 @@
     position: absolute;
     height: 3px;
     width: 100%;
-    background: #000000;
+    background: var(--text-color-darkmode);
     border-radius: 9px;
     padding: 0;
     margin: 0;
