--- a/src/app/(onscreen)/(cart)/appointment.module.css
+++ b/src/app/(onscreen)/(cart)/appointment.module.css
@@ -52,7 +52,7 @@
     display: flex;
     border-radius: 20px;
     cursor: pointer;
-    border: 1px solid #f0a4fa;
+    border: 1px solid  #78457f;
     overflow: hidden;
     width: fit-content;
     animation: slideUp 1.5s ease forwards 1.5s;
@@ -108,7 +108,7 @@
     position: relative;
     transition: opacity 0.5s ease-in-out, background-color 3s ease-in-out;
     background-color: #e100ff;
-    border: 1px solid #f0a4fa;
+    border: 1px solid  #78457f;
     animation: slideDown 1s ease forwards;
 }
 
@@ -123,7 +123,7 @@
     width: 0;
     border-radius: 0;
     overflow: hidden;
-    border: 1px solid #f0a4fa;
+    border: 1px solid  #78457f;
     margin: 0;
     transform: translateX(50px) translateY(50px);
     cursor: pointer;
@@ -137,13 +137,13 @@
     padding: 30px 0;
     margin: 0;
     opacity: 1;
-    transition: all 1s ease-in-out, opacity 1.7s ease-in-out;
+    transition: all 1s ease-in-out, opacity 1.3s ease-in-out;
     transform: translateX(0) translateY(0);
 }
 
 .cartClosed {
     opacity: .1;
-    transition: all 1s ease-in-out, opacity .7s ease-in-out;
+    transition: all 1s ease-in-out, opacity 1.3s ease-in-out;
 }
 .chatOpened {
     background-color: var(--background-darkmode);
@@ -154,7 +154,7 @@
     width: 0;
     border-radius: 0;
     overflow: hidden;
-    border: 1px solid #f0a4fa;
+    border: 1px solid #78457f;
     margin: 0;
     padding: 0 0 0 0;
     transition: all 1s ease-in-out;
@@ -189,6 +189,11 @@
 
 .cartItemsDivHeaders {
     font-size: 20px;
+    color: var(--text-color-darkmode);
+}
+
+.cartItems {
+    color: var(--text-color-darkmode);
 }
 
 .cartItemsAdditionalServices {
@@ -223,8 +228,8 @@
 .cartHeader {
     padding: 0 0 10px 0;
     margin: 0;
-    color: rgb(61, 61, 61);
-    border-bottom: 1px solid #f0a4fa;
+    color: var(--text-color-darkmode);
+    border-bottom: 1px solid  #78457f;
     border-radius: 15px;
     text-align: center;
     width: 100%;
@@ -293,7 +298,7 @@
     position: absolute;
     z-index: 99;
     border: none;
-    background: #f0a4fa;
+    background:  #78457f;
     background-size: 18px;
     cursor: pointer;
     outline: none;
@@ -305,7 +310,7 @@
     top: 0px;
     width: 20px;
     height: 20px;
-    background: #f0a4fa;
+    background:  #78457f;
     border-radius: 100%;
     display: flex;
     justify-content: center;
@@ -352,7 +357,7 @@
     position: absolute;
     z-index: 99;
     border: none;
-    background: #f0a4fa;
+    background:  #78457f;
     cursor: pointer;
     outline: none;
     overflow: hidden;
