--- a/src/app/(onscreen)/(chatbox)/chatbox1.css
+++ b/src/app/(onscreen)/(chatbox)/chatbox1.css
@@ -15,11 +15,14 @@
     bottom: 0;
 }
 
+.react-chatbot-kit-chat-message-container {
+    background-color: var(--background-darkmode);
+}
 .react-chatbot-kit-chat-input {
     width: 100%;
-    height: fit-content;
+    height: 100%;
     padding: 10px;
-    border: 1px solid #f0a4fa;
+    border: 1px solid #78457f;
     border-radius: 10px;
 }
 
@@ -28,18 +31,19 @@
     justify-content: space-between;
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 .react-chatbot-kit-chat-btn-send {
     width: 20%;
-    height: 100%;
-    border: 1px solid #f0a4fa;
+    height: 34px;
+    border: 1px solid #78457f;
     border-radius: 10px;
     background-color: #eeeeee;
 }
 
 .react-chatbot-kit-chat-btn-send:hover {
-    background-color: #f0a4fa;
+    background-color: #78457f;
     color: white;
 }
 .react-chatbot-kit-chat-btn-send-icon {
@@ -50,4 +54,13 @@
 
 .react-chatbot-kit-user-avatar-icon {
     display: none;
+}
+
+.react-chatbot-kit-user-chat-message-container {
+    max-width: 298px;
+}
+
+.react-chatbot-kit-user-chat-message {
+    white-space: normal;
+    word-break: break-word;
 }
