--- a/src/app/(onscreen)/(chatbox)/radixscroll.css
+++ b/src/app/(onscreen)/(chatbox)/radixscroll.css
@@ -4,7 +4,7 @@
     border-radius: 4px;
     overflow: hidden;
     box-shadow: 0 2px 10px var(--black-a7);
-    background-color: white;
+    background-color: var(--darkmode-background);
     --scrollbar-size: 10px;
 }
 
@@ -12,6 +12,7 @@
     width: 100%;
     height: 100%;
     border-radius: inherit;
+    background-color: var(--darkmode-background);
 }
 
 .ScrollAreaScrollbar {
@@ -40,7 +41,7 @@
 
 .ScrollAreaThumb {
     flex: 1;
-    background: #eccff0;
+    background: #78457f;
     border-radius: var(--scrollbar-size);
     position: relative;
 }
