--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,10 +16,10 @@
   margin: 0;
   min-height: 100vh;
   width: 100%;
-  background-color: var(--background-darkmode);
   box-sizing: border-box;
   overflow: hidden;
   overflow-y: auto;
+  background-color: var(--background-darkmode);
 }
 
 .hidden-label {
@@ -59,18 +59,75 @@ button {
 html,
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: var(--background-darkmode-purple);
   min-height: 100vh;
   width: 100%;
-  padding: 0;
-  margin: 0;
   font-family: 'Nunito', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
+
+body {
+    padding: 40px 0 0 0;
+
+}
+
+
+html {
+  margin: 0;
+  padding: 40px 2vw 0 2vw;
+}
+
+html::before,
+html::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 2vw;
+  background-image: url("/flowers3.jpeg");
+  background-size: cover;
+  background-attachment: scroll;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+
+html::before {
+  left: 0;
+}
+
+html::after {
+  right: 0;
+}
+
+
+body::before,
+body::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 2vw;
+  background-color: rgba(0, 0, 0, 0.454);
+  z-index: 3;
+}
+
+
+body::before {
+  left: 0;
+}
+
+body::after {
+  right: 0;
+}
+
+
 
 html {
   position: relative;
-  background-color: var(--background-darkmode);
+
   font-family: 'Nunito', sans-serif;
+
+
 }
 
 a {
