--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,8 +3,9 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  background-color: var(--background-darkmode-purple);
+  background-color: transparent;
   padding: 30px 30px 30px 30px;
+  z-index: 2;
 }
 
 .mainChild {
