--- a/src/app/(pages)/services/services.module.css
+++ b/src/app/(pages)/services/services.module.css
@@ -70,7 +70,7 @@
     height: 100%;
     min-height: 300px;
     max-height: 600px;
-    object-fit: cover;
+    object-fit: scale-down;
     margin: 0 auto;
 }
 
