--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,7 +107,7 @@ body::after {
   top: 0;
   bottom: 0;
   width: 2vw;
-  background-color: rgba(0, 0, 0, 0.454);
+  background-color: rgba(77, 77, 77, 0.793);
   z-index: 3;
 }
 
@@ -136,20 +136,23 @@ a {
 }
 
 :root::-webkit-scrollbar {
+  background-color: var(--background-darkmode-purple);
   width: 12px;
+
 }
 :root::-webkit-scrollbar-track {
   background-color: var(--background-darkmode-purple);
+    margin: 45px 0 0 0;
 }
 
 :root::-webkit-scrollbar-thumb {
   border-radius: 3px;
   border: 1px solid rgba(189, 189, 189, 0.413);
-  background-color: #796b7a;
+  background-color: #a379a6;
 }
 
 :root::-webkit-scrollbar-thumb:hover {
   border-radius: 3px;
   border: 1px solid rgb(189, 189, 189);
-  background-color: #5a445c;
+  background-color: #836685;
 }
