--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,57 +77,10 @@ html {
   padding: 40px 2vw 0 2vw;
 }
 
-html::before,
-html::after {
-  content: '';
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 2vw;
-  background-image: url("/flowers3.jpeg");
-  background-size: cover;
-  background-attachment: scroll;
-  background-repeat: no-repeat;
-  z-index: 2;
-}
-
-html::before {
-  left: 0;
-}
-
-html::after {
-  right: 0;
-}
-
-
-body::before,
-body::after {
-  content: '';
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 2vw;
-  background-color: rgba(77, 77, 77, 0.793);
-  z-index: 3;
-}
-
-
-body::before {
-  left: 0;
-}
-
-body::after {
-  right: 0;
-}
-
-
 
 html {
   position: relative;
-
   font-family: 'Nunito', sans-serif;
-
-
 }
 
 a {
@@ -147,8 +100,8 @@ a {
 
 :root::-webkit-scrollbar-thumb {
   border-radius: 3px;
-  border: 1px solid rgba(189, 189, 189, 0.413);
-  background-color: #a379a6;
+  border: 1px solid rgba(189, 189, 189, 0.551);
+  background-color: var(--background-darkmode-purple);
 }
 
 :root::-webkit-scrollbar-thumb:hover {
