Fixed Logins And Services

--- a/src/app/(pages)/myappointments/deleteappointment.css
+++ b/src/app/(pages)/myappointments/deleteappointment.css
@@ -2,6 +2,7 @@
     position: fixed;
     inset: 0;
     animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+    background-color: rgba(0, 0, 0, 0.177);
 }
 
 .AlertDialogContent {
