--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,14 +12,14 @@
   --hamburger-gap: 6px;
   --foreground: #333;
   font-family: 'Nunito', sans-serif;
-  padding: 0;
+  padding: 0 0 0 0;
   margin: 0;
   min-height: 100vh;
   width: 100%;
   box-sizing: border-box;
   overflow: hidden;
   overflow-y: auto;
-  background-color: var(--background-darkmode);
+  background-color: var(--background-darkmode-purple);
 }
 
 .hidden-label {
@@ -67,14 +67,14 @@ body {
 }
 
 body {
-    padding: 40px 0 0 0;
+    padding: 45px 0 0 0;
 
 }
 
 
 html {
   margin: 0;
-  padding: 40px 2vw 0 2vw;
+  padding: 45px 2vw 0 2vw;
 }
 
 
